[] Update toolbar when view changes (List <-> Tree)
[] Set PWS title when opening a database at startup
[] Allow List view to process all characters e.g. Page Up/Down, Home, End,
Arrows etc.

Changes to Existing Features in 3.11.2
======================================
[] Icon column now eligible for Column Picker.  Can be displayed at user's
discretion.

New Features for 3.11.2
=======================
None

Bugs fixed in 3.11.1
====================
[] No longer crashes when pulling down Edit menu in List view with no
entry selected.
[1837534] Autotype handles tab correctly when typing to Internet
Explorer.
[] Copy Username and Copy Password new toolbar icons swapped back.

Changes to Existing Features in 3.11.1
======================================
[] You can now check for newer version via Help->About
[] List view displays an icon in each row showing the type of entry

New Features for 3.11
=====================
[1765240] Add "Clear clipboard" item to tray icon context menu.
[1727768] Copy URL to clipboard added to menus (Ctrl+Alt+L).
[1526169] Add more shortcut keys to add/edit dialog.
[] Give user access to Reports from View menu (only in the same directory
as current open database), since more information is being written there.
[] Give user access to the Compare report from the Compare results dialog.
[] New email action allowed in URL field. To be treated as email, the
data must be prefixed by the characters "mailto:". The data following
this corresponds to the '[mailto:]' standard RFC2368.
For example: "info@example.com?subject=PasswordSafe".
[] Main toolbar can be customized via MS's standard dialog via right
click on this toolbar.
[] Several entries may be "aliased" to a single entry, sharing its
password. See online help for details.

Changes to Existing Features in 3.11
====================================
[1815192] The Find function has been re-implemented as a toolbar at
bottom of application.
Button shortcuts: Ctrl+Alt+A = Advanced find,