@@ -85,6 +85,13 @@ IDI_MBWARNICON          ICON                    "res\\W95MBX03.ICO"
 IDI_MBINFOICON          ICON                    "res\\W95MBX04.ICO"
 IDI_LOCKEDICON          ICON                    "res\\locked_tray.ico"
 IDI_UNLOCKEDICON        ICON                    "res\\unlocked_tray.ico"
+IDI_NORMAL              ICON                    "res\\normal.ico"
+IDI_NORMAL_EXPIRED      ICON                    "res\\normal_exp.ico"
+IDI_NORMAL_WARNEXPIRED  ICON                    "res\\normal_warn.ico"
+IDI_ALIAS               ICON                    "res\\alias.ico"
+IDI_ABASE               ICON                    "res\\abase.ico"
+IDI_ABASE_EXPIRED       ICON                    "res\\abase_exp.ico"
+IDI_ABASE_WARNEXPIRED   ICON                    "res\\abase_warn.ico"
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -387,13 +394,13 @@ IDB_CLOGO               BITMAP                  "res\\cpane.bmp"
 IDB_CTEXT               BITMAP                  "res\\cpanetxt.bmp"
 IDB_CLOGO_SMALL         BITMAP                  "res\\cpane_s.bmp"
 IDB_NODE                BITMAP                  "res\\node.bmp"
-IDB_LEAF                BITMAP                  "res\\leaf.bmp"
-IDB_LEAF_EXPIRED        BITMAP                  "res\\leaf_exp.bmp"
-IDB_LEAF_WARNEXPIRED    BITMAP                  "res\\leaf_warn.bmp"
-IDB_LEAF_ALIAS          BITMAP                  "res\\leaf_alias.bmp"
-IDB_LEAF_BASE           BITMAP                  "res\\leaf_base.bmp"
-IDB_LEAF_BASE_EXPIRED   BITMAP                  "res\\leaf_base_exp.bmp"
-IDB_LEAF_BASE_WARNEXPIRED BITMAP                  "res\\leaf_base_warn.bmp"
+IDB_NORMAL              BITMAP                  "res\\normal.bmp"
+IDB_NORMAL_EXPIRED      BITMAP                  "res\\normal_exp.bmp"
+IDB_NORMAL_WARNEXPIRED  BITMAP                  "res\\normal_warn.bmp"
+IDB_ALIAS               BITMAP                  "res\\alias.bmp"
+IDB_ABASE               BITMAP                  "res\\abase.bmp"
+IDB_ABASE_EXPIRED       BITMAP                  "res\\abase_exp.bmp"
+IDB_ABASE_WARNEXPIRED   BITMAP                  "res\\abase_warn.bmp"
 IDB_ADD_CLASSIC         BITMAP                  "res\\toolbar\\add_classic.bmp"
 IDB_ADD_NEW32           BITMAP                  "res\\toolbar\\add_new32.bmp"
 IDB_ADD_NEW8            BITMAP                  "res\\toolbar\\add_new8.bmp"
